Bug 1736386 - Allow non-allday event names to wrap in the multiday views. r=darktrojan a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D131790

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -155,7 +155,7 @@
   overflow-x: hidden;
 }
 
-.calendar-item-flex > alarm-icons-box {
+.calendar-item-flex > .alarm-icons-box {
   display: contents;
 }
 
@@ -205,6 +205,10 @@
 
 .event-name-label {
   white-space: nowrap;
+}
+
+calendar-event-column .event-name-label {
+  white-space: normal;
 }
 
 .event-name-input,
